<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxon_epos4_ros1_bridge</name>
  <version>0.0.1</version>
  <description>The maxon_epos4_ros1_bridge package allows to control maxon EPOS4 from ROS2 through ROS1 ros_canopen</description>
  <author email="cyril.jourdan@roboprotos.com">Cyril Jourdan</author>
  <maintainer email="cyril.jourdan@roboprotos.com">Cyril Jourdan</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/maxon_epos4_ros2</url>
  <url type="repository">https://github.com/roboprotos/maxon_epos4_ros2</url>
  <url type="bugtracker">https://github.com/roboprotos/maxon_epos4_ros2/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
